--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
 <html ng-app = "myApp">
 
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src= "app.js"></script>
     <title>Hello, World!</title>
 </head>
  
 <body ng-controller="FirstCtrl">
+  <header ng-include ="'header.html'"></header>
+  <main ng-view></main>
+  <input type="text" ng-model= "search">
+  <div>
+    <button ng-click ="order = 'name'">Order By Name</button>
+    <button ng-click ="order = 'rank'">Order By Rank</button>
+  </div>
+  <ul>
+    <li ng-repeat="meat in meats | orderBy: order | filter: search" ng-show= "meat.available">
+      <img class="resize" ng-show= "meat.thumb" ng-src ="{{meat.thumb}}">
+      <h3>The meat {{meat.meat}} has the rank {{meat.rank}} - {{meat.publicRate | currency}}</h3>
+      <div class="remove" ng-click="removeMeat(meat)">Remove {{meat.meat}}</div>
+    </li>
+  </ul>
 
-<input type="text" ng-model= "search">
-
-<ul>
-  <li ng-repeat="meat in meats | orderBy: 'meat' | filter: search">The meat {{meat.meat}} has the rank {{meat.rank}} - {{meat.publicRate | currency}}</li>
-</ul>
+  <form ng-submit="addMeat()">
+    <input type='text' placeholder="meat" ng-model="newmeat.meat"/>
+    <input type='text' placeholder="rank" ng-model="newmeat.rank"/>
+    <input type='text' placeholder="public rate" ng-model="newmeat.publicRate"/>
+    <input type="submit" value= "Add meat"/>
+  </form>
 
 </body>
 
